src/test/compile-fail/unnecessary-io.rs
// xfail-stage0
// error-pattern: calculated effect is ''
impure fn main() {
  log "hi";
}